--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.0",
     "axios": "^1.7.9",
+    "marked": "^15.0.6",
     "pinia": "^2.3.1",
     "tailwindcss": "^4.0.0",
     "vue": "^3.5.13",
