--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.21.0",
     "@tailwindcss/vite": "^4.0.0",
     "axios": "^1.7.9",
     "marked": "^15.0.6",
